--- a/InstaHiiTPrivacyPolicy.html
+++ b/InstaHiiTPrivacyPolicy.html
@@ -1018,7 +1018,7 @@ Transfers<o:p></o:p></span></h3>
 <p><span style='font-family:proxima-nova'>If <span class=SpellE>InstaHiiT</span>,
 or substantially all of its assets, were acquired, or in the unlikely event that
 <span class=SpellE>InstaHiiT</span> goes out of business or enters bankruptcy,
-user information would <span style='mso-spacerun:yes'> </span>not be one of the
+user information would <span style='mso-spacerun:yes'>Â </span>not be one of the
 assets that is transferred or acquired by a third party. <o:p></o:p></span></p>
 
 <h3><span style='font-family:proxima-nova;mso-fareast-font-family:"Times New Roman"'>Privacy
